--- a/faq.html
+++ b/faq.html
@@ -78,19 +78,19 @@
 
 <li> Wie verbinde ich mein Gitlab-Projekt mit Pycharm? </li>
 <p> Sie können das Gitlab Projekt entweder mit SSH-Schlüssel oder mit HTTPS auf Ihren PC klonen.
-<li> 1). Gitlab -> Project -> Clone -> Clone with SSH/HTTPS (Wie man einen SSH-Schüssel anlegen kann, können Sie in der nächsten Frage lesen) </li>
-<li> 2). Pycharm -> VCS -> Get from Version Control -> den kopierten Link eingeben -> add file to Git -> Ja </li>
+1). Gitlab -> Project -> Clone -> Clone with SSH/HTTPS (Wie man einen SSH-Schüssel anlegen kann, können Sie in der nächsten Frage lesen) 
+2). Pycharm -> VCS -> Get from Version Control -> den kopierten Link eingeben -> add file to Git -> Ja </p>
 
 
 <li> Wie kann ich einen ssh Schlüssel zu meinem Profil hinzufügen? </li>
 <p> Mit SSH-Schlüsseln können Sie eine sichere Verbindung zwischen Ihrem Computer und GitLab herstellen. Unter <a href="https://gitlab2.cip.ifi.lmu.de/help/ssh/index.md#generate-an-ssh-key-pair"> diesem Link </a> können Sie einen ssh Schlüssel für Ihren gitlab Account anlegen. Wie man einen ssh Schlüssel erstellen kann sehen Sie <a href="https://gitlab2.cip.ifi.lmu.de/help/ssh/index.md"> hier. </a> </p>
 
 <li> Ich kann leider eine Bibliothek in Python wie z.B. nltk nicht installieren, was soll ich machen? </li>
-<li> a. Falls Sie Pycharm nutzen, versuchen Sie es bitte hier zu installieren:
-Settings/Preferences → Project: → Project Interpreter → + → nltk eingeben → install package → done </li>
-<li> b. Falls Sie kein Pycharm nutzen, können Sie diesen Befehl im Terminal ausführen: pip3 install –user nltk
-Falls es dann immernoch nicht klappt, wenden Sie sich bitte an die Tutoren oder geben Sie die Fehlermeldung in einer Suchmaschine ein. </li>
-<p> PS: Es wird empfohlen die Entwicklungsumgebung PyCharm für die Bearbeitung der Programmieraufgaben zu nutzen. Diese unterstützt insbesondere auch eine grafische Oberfläche und Integration für Git. Eine kurze Einleitung zu PyCharm finden Sie <a href="https://cis-sp2021.github.io/pycharm.pdf"> hier. </a> </p>
+<p> a. Falls Sie Pycharm nutzen, versuchen Sie es bitte hier zu installieren:
+Settings/Preferences → Project: → Project Interpreter → + → nltk eingeben → install package → done 
+b. Falls Sie kein Pycharm nutzen, können Sie diesen Befehl im Terminal ausführen: pip3 install –user nltk
+Falls es dann immernoch nicht klappt, wenden Sie sich bitte an die Tutoren oder geben Sie die Fehlermeldung in einer Suchmaschine ein.
+PS: Es wird empfohlen die Entwicklungsumgebung PyCharm für die Bearbeitung der Programmieraufgaben zu nutzen. Diese unterstützt insbesondere auch eine grafische Oberfläche und Integration für Git. Eine kurze Einleitung zu PyCharm finden Sie <a href="https://cis-sp2021.github.io/pycharm.pdf"> hier. </a> </p>
 
 <li> Ich kann die Unit Tests nicht ausführen, woran könnte es liegen? </li>
 <p> Ein häufiger Fehler ist, dass die Unit Tests nicht im src Ordner ausgeführt werden. Nachdem Sie sichergestellt haben, dass Sie sich im src Ornder befinden, sollten Sie den folgenden Befehl im Terminal ausführen können:
